# rustacean-docs

./: .dockerignore  CLAUDE.md  CLI_IMPROVEMENTS_PLAN.md  Cargo.toml  Dockerfile  README.md  deploy.sh  devenv.nix  docker-compose.yml
.claude/: settings.local.json
crates/cache/: Cargo.toml
crates/cache/src/: disk.rs  lib.rs  maintenance.rs  memory.rs  strategy.rs  tiered.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  error.rs  lib.rs  traits.rs
crates/core/src/error/: builder.rs  cache.rs  config.rs  context.rs  docs.rs  mod.rs  network.rs  protocol.rs
crates/core/src/models/: docs.rs  metadata.rs  mod.rs  search.rs
crates/core/src/types/: crate_name.rs  item_path.rs  mod.rs  version.rs
crates/core/src/utils/: version.rs
crates/docs-client/: Cargo.toml
crates/docs-client/src/: client.rs  config.rs  error_handling.rs  html_parser.rs  lib.rs  retry.rs  service_config.rs
crates/docs-client/src/endpoints/: docs.rs  metadata.rs  mod.rs  releases.rs  search.rs
crates/docs-client/src/endpoints/common/: cache_traits.rs  mod.rs
crates/docs-client/src/endpoints/docs_modules/: cache_keys.rs  mod.rs  parsing.rs  service.rs
crates/docs-client/src/html_parser/: docs_parser.rs  path_resolver.rs
crates/docs-client/test_fixtures/: empty_crate.html  malformed_docs.html  serde_docs.html  tokio_docs.html
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: common.rs  lib.rs
crates/integration-tests/tests/: cache_integration.rs  docs_workflow.rs  full_workflow.rs  mcp_protocol.rs  mod.rs  search_flow.rs
crates/mcp-server/: CLI_USAGE.md  Cargo.toml
crates/mcp-server/src/: config.rs  lib.rs  main.rs  mcp_handler.rs  server.rs
crates/mcp-server/src/tools/: cache_ops.rs  crate_docs.rs  crate_overview.rs  item_docs.rs  metadata.rs  mod.rs  releases.rs  search.rs
