[workspace]
members = [
    "crates/core",
    "crates/docs-client", 
    "crates/cache",
    "crates/mcp-server",
    "crates/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/rustacean-docs"
description = "MCP server for Rust documentation access"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Caching
lru = "0.12"
cacache = "13.0"

# HTML parsing
scraper = "0.18"

# URL encoding
urlencoding = "2.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = { version = "2", features = ["serde"] }

# Regular expressions
regex = "1"

# Configuration parsing
toml = "0.8"

# Async trait support
async-trait = "0.1"

# Test dependencies  
tempfile = "3.0"

# MCP protocol - using a placeholder since real mcp-sdk may not exist yet
# mcp-sdk = { version = "0.1", features = ["server"] }