[package]
name = "rustacean-docs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data models and types for Rustacean Docs MCP server"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }