[package]
name = "rustacean-docs-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client for accessing Rust documentation APIs"

[features]
default = []
integration-tests = []

[dependencies]
rustacean-docs-core = { path = "../core" }
rustacean-docs-cache = { path = "../cache" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
scraper.workspace = true
tracing.workspace = true
urlencoding.workspace = true
chrono.workspace = true
url.workspace = true
regex.workspace = true
toml.workspace = true

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"