[package]
name = "rustacean-docs-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration tests for Rustacean Docs MCP Server"

[dependencies]
# Core dependencies
rustacean-docs-core = { path = "../core" }
rustacean-docs-client = { path = "../docs-client" }
rustacean-docs-cache = { path = "../cache" }
rustacean-docs-mcp-server = { path = "../mcp-server" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
url.workspace = true

[dev-dependencies]
tokio-test = "0.4"

# Disable running as a normal library
[lib]
name = "integration_tests"
path = "src/lib.rs"
test = false