[package]
name = "rustacean-docs-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server implementation for Rust documentation access"

[[bin]]
name = "rustacean-docs-server"
path = "src/main.rs"

[[bin]]
name = "rustacean-docs-cli"
path = "src/bin/cli.rs"

[dependencies]
rustacean-docs-core = { path = "../core" }
rustacean-docs-client = { path = "../docs-client" }
rustacean-docs-cache = { path = "../cache" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
dirs = "5.0"
rust-mcp-sdk = { version = "0.4.2", features = ["server"] }
clap = { version = "4.5", features = ["derive"] }
# mcp-sdk.workspace = true

[features]
integration-tests = []

[dev-dependencies]
mockito = "1.0"
